css/extra.css
a {
    color: #055C9D;
    text-decoration: none;
}

section {
    margin-top: 20px;
}

.equation-container {
  width: 100%; /* Set the width of the container, adjust as needed */
  overflow-x: auto; /* Enables horizontal scrolling */
  white-space: nowrap; /* Keeps the equation in a single line */
}

.abstract {
  text-align: justify;
  /* padding: 0 2% 0 2%; */
}

.paperpage-title {
  font-weight: bold;
  color: #055C9D;
}

.author {
  font-size: 14pt;
    font-weight: bold;
    color: #636566;
    margin-top: 2px;
    padding: 0px;
}

.team-name {
    font-size: 14pt;
    font-weight: bold;
    color: #055C9D;
    margin-top: 2px;
    padding: 0px;
}

.team-role {
  padding: 0px;
  /* margin-top: -20px; */
}

.bibtex-container {
  background-color: #f8f9fa;
  border: 1px solid #dee2e6;
  padding: 10px;
  font-size: 12pt;
  user-select: text;
  font-family: monospace;
}

.icon {
    width: 40px;
    height: 40px;
}

.venue {
  color: #26BF2B;
}

.project {
  margin-bottom: 10px;
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
  text-align: start;
}
.pico {
  float: left;
  margin-right: 10px;
}
.pdesc {
  
}

.pdesc ul {
  padding-left: 7em;
}

.pend {
  clear: both;
}
.pico img {
  height: 80px;
  border-radius: 5px;
  border: 1px solid #999;
}

.project-icon {
    width: 88px;
    height: 88px;
    overflow: hidden;
    display: inline-block;
}

.project-icon img {
  width: 100%;
  height: 100%;
  object-fit: cover; /* this does the magic */
  object-position: center; /* adjust as needed */
}

img.rounded {
    object-fit: cover;
    width: 240px;
    height: 240px;
    border-radius: 120px;
}

.button {
    background-color: white;
    cursor: pointer;
    border: none;
    color: #055C9D;
    padding: 0px;
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 10px;
    text-align: center;
    font-family: Optima;
    font-size: 12pt;
  }
  
  .boxabstract {
    width: 100%;
    padding: 5px 5px;
    text-align: justify;
    background-color: Gainsboro;
    margin-top: 10px;
  }

  .post-entry {
    border-left: 4px solid #aaa;
    padding: 2px 0px 2px 10px;
    margin-bottom: 10px;
  }

/* Colors */
.color-blue {
  color: rgb(65,105,225);
  font-style: normal;
}

.color-green {
  color: rgb(74,103,65);
  font-style: normal;
}

.color-red {
  color: rgb(178,34,34);
  font-style: normal;
}

